--- a/src/imaster-client/src/app/components/nav/nav.html
+++ b/src/imaster-client/src/app/components/nav/nav.html
@@ -7,12 +7,12 @@
     </div>
     <div ng-hide="vm.isLogging()" class="nav__menu">
         <ul>
-            <li><a ui-sref="/">Главгая</a></li>
-            <li ng-show="vm.isAdmin() || vm.isTeacher()"><a ui-sref="students.list">Студенты</a></li>
+            <li ng-show="vm.isAdmin() || vm.isTeacher()"><a ui-sref="students.list">Магистранты</a></li>
             <li ng-show="vm.isAdmin()"><a ui-sref="teachers">Преподаватели</a></li>
             <li ng-show="vm.isAdmin()"><a ui-sref="users">Пользователи</a></li>
-            <li ng-show="vm.isTeacher()"><a ui-sref="upload">Загрузить материал</a></li>
-            <li ng-show="vm.isTeacher() || vm.isStudent()"><a ui-sref="essays.list">Создать реферат</a></li>
+            <li ng-show="vm.isTeacher() || vm.isStudent()"><a ui-sref="documents.list">Справочная литерату</a></li>
+            <li ng-show="vm.isStudent()"><a ui-sref="essays.add">Создать реферат</a></li>
+            <li ng-show="vm.isTeacher()"><a ui-sref="essays.list">Список рефератов</a></li>
         </ul>
     </div>
     <div class="nav__user">
