--- a/src/imaster-client/src/app/components/login/login.html
+++ b/src/imaster-client/src/app/components/login/login.html
@@ -6,7 +6,7 @@
     </div>
     <div class="form__row--inline">
         <label for="label-password" class="form__control">Пароль</label>
-        <input id="label-password" class="form__control" name="password" ng-model="vm.password">
+        <input id="label-password" type="password" class="form__control" name="password" ng-model="vm.password">
     </div>
     <div class="form__row">
         <button ng-click="vm.login()" class="block--right button--success">Войти</button>
