--- a/src/imaster-client/src/app/components/essay/essay-list.html
+++ b/src/imaster-client/src/app/components/essay/essay-list.html
@@ -24,7 +24,7 @@
             <td>{{essay.title}}</td>
             <td>{{essay.status.title}}</td>
             <td>{{essay.description}}</td>
-            <td><span ui-sref="essays.edit({id: {{essay.id}}})" title="Открыть">Открыть</span></td>
+            <td><span ui-sref="essays.edit({id: essay.id})" class="icon--edit" title="Открыть"></span></td>
         </tr>
         </tbody>
     </table>
