--- a/src/imaster-client/src/app/components/student/student-list.html
+++ b/src/imaster-client/src/app/components/student/student-list.html
@@ -28,7 +28,7 @@
                 <td>{{student.patronymic}}</td>
                 <td>{{student.birthday}}</td>
                 <td>{{student.group.title}}</td>
-                <td><span ui-sref="students.edit({id: {{student.id}}})" class="icon--edit" title="Изменить"></span></td>
+                <td><span ui-sref="students.edit({id: student.id})" class="icon--edit" title="Изменить"></span></td>
             </tr>
         </tbody>
     </table>
