added loading a essay to edit

--- a/src/imaster-client/src/app/components/essay/essay.html
+++ b/src/imaster-client/src/app/components/essay/essay.html
@@ -2,8 +2,8 @@
     <form class="form--default">
         <h3 class="form__legend">Реферат</h3>
         <div class="form__row--inline">
-            <label for="label-essay-title" class="form__control  form__row--inline">Тема:</label>
-            <input id="label-essay-title" form="label-essay-title" class="form__control" ng-model="vm.essay.title">
+            <label for="label-essay-title" class="form__control">Тема:</label>
+            <input id="label-essay-title" type="text" class="form__control" ng-model="vm.essay.title">
         </div>
         <div class="form__row--inline">
             <label for="label-essay-file" class="form__control">Реферат:</label>
