added type="text" for inputs and field email for student

--- a/src/imaster-client/src/app/components/login/login.html
+++ b/src/imaster-client/src/app/components/login/login.html
@@ -2,7 +2,7 @@
     <h3 class="form__legend">Вход</h3>
     <div class="form__row--inline">
         <label for="label-login" class="form__control">Имя</label>
-        <input id="label-login" class="form__control" name="password" ng-model="vm.username">
+        <input id="label-login" type="text" class="form__control" name="password" ng-model="vm.username">
     </div>
     <div class="form__row--inline">
         <label for="label-password" class="form__control">Пароль</label>
