--- a/src/imaster-client/src/resources/stylesheets/_layout.scss
+++ b/src/imaster-client/src/resources/stylesheets/_layout.scss
@@ -102,6 +102,11 @@ a {
   background: url("../images/file-remove.png");
 }
 
+.icon--file-dowload {
+  @extend .icon;
+  background: url("../images/file-download.png");
+}
+
 .block--center {
   margin: 0 auto;
 }
