for essay added common service and made some refactoring/improvements

--- a/src/imaster-client/src/app/components/essay/essay-list.html
+++ b/src/imaster-client/src/app/components/essay/essay-list.html
@@ -3,8 +3,8 @@
         <caption>
             <h3 class="form__legend">Список рефератов</h3>
             <ul class="list--group block--right">
-                <li><a ui-sref="students.add" class="icon--add" title="Добавить"></a></li>
-                <li><a ng-click="vm.remove()" class="icon--remove" title="Удалить"></a></li>
+                <li><a ui-sref="essays.add" class="icon--file-add" title="Добавить"></a></li>
+                <li><a ng-click="vm.remove()" class="icon--file-remove" title="Удалить"></a></li>
             </ul>
         </caption>
         <thead>
